force-app/main/default/objects/Character__c/fields/CharacterId__c.field-meta.xml
<CustomField>
    <fullName>CharacterId__c</fullName>
    <externalId>true</externalId>
    <label>CharacterId</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>