force-app/main/default/objects/Character__c/fields/CharacterURL__c.field-meta.xml
<CustomField>
    <fullName>CharacterURL__c</fullName>
    <label>CharacterURL</label>
    <type>Url</type>
</CustomField>