force-app/main/default/objects/Character__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Druid</fullName>
            </value>
            <value>
                <fullName>Hunter</fullName>
            </value>
            <value>
                <fullName>Mage</fullName>
            </value>
            <value>
                <fullName>Paladin</fullName>
            </value>
            <value>
                <fullName>Priest</fullName>
            </value>
            <value>
                <fullName>Rogue</fullName>
            </value>
            <value>
                <fullName>Shaman</fullName>
            </value>
            <value>
                <fullName>Warlock</fullName>
            </value>
            <value>
                <fullName>Warrior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>