force-app/main/default/objects/Character__c/fields/Server__c.field-meta.xml
<CustomField>
    <fullName>Server__c</fullName>
    <label>Server</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>anathema</fullName>
            </value>
            <value>
                <fullName>amnennar</fullName>
            </value>
            <value>
                <fullName>arcanite reaper</fullName>
            </value>
            <value>
                <fullName>arugal</fullName>
            </value>
            <value>
                <fullName>ashkandi</fullName>
            </value>
            <value>
                <fullName>atiesh</fullName>
            </value>
            <value>
                <fullName>azuresong</fullName>
            </value>
            <value>
                <fullName>benediction</fullName>
            </value>
            <value>
                <fullName>bigglesworth</fullName>
            </value>
            <value>
                <fullName>blaumeux</fullName>
            </value>
            <value>
                <fullName>bloodsail buccaneers</fullName>
            </value>
            <value>
                <fullName>deviate delight</fullName>
            </value>
            <value>
                <fullName>earthfury</fullName>
            </value>
            <value>
                <fullName>faerlina</fullName>
            </value>
            <value>
                <fullName>fairbanks</fullName>
            </value>
            <value>
                <fullName>felstriker</fullName>
            </value>
            <value>
                <fullName>grobbulus</fullName>
            </value>
            <value>
                <fullName>heartseeker</fullName>
            </value>
            <value>
                <fullName>herod</fullName>
            </value>
            <value>
                <fullName>incendius</fullName>
            </value>
            <value>
                <fullName>kirtonos</fullName>
            </value>
            <value>
                <fullName>kromcrush</fullName>
            </value>
            <value>
                <fullName>kurinnaxx</fullName>
            </value>
            <value>
                <fullName>loatheb</fullName>
            </value>
            <value>
                <fullName>mankrik</fullName>
            </value>
            <value>
                <fullName>myzrael</fullName>
            </value>
            <value>
                <fullName>netherwind</fullName>
            </value>
            <value>
                <fullName>old blanchy</fullName>
            </value>
            <value>
                <fullName>pagle</fullName>
            </value>
            <value>
                <fullName>rattlegore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>